# expense-approval-agent

./: .agents-cli-spec.md  README.md  index.js  package-lock.json  package.json
ambient-expense-agent/: Makefile  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
ambient-expense-agent/artifacts/grade_results/: results_20260620_112733.html  results_20260620_112733.json
ambient-expense-agent/artifacts/traces/: generated_traces.json  test-trace.json
ambient-expense-agent/expense_agent/: agent.py  config.py  web_service.py
ambient-expense-agent/scratch/: encode.py  find_gemini_model.py  parse_results.py  print_google_llm_client.py  run_workflow.py  test_deployed.py  test_hitl.py  test_reasoning_engine.py  test_remote_query.py
ambient-expense-agent/tests/eval/: eval_config.yaml  generate_traces.py
ambient-expense-agent/tests/eval/datasets/: basic-dataset.json
submission_frontend/: Dockerfile  main.py  pyproject.toml
temp-key-project/: README.md  agents-cli-manifest.yaml  pyproject.toml
temp-key-project/app/: fast_api_app.py
temp-key-project/app/app_utils/: telemetry.py  typing.py
weather-assistant/: agents-cli-manifest.yaml
weather-assistant/app/: agent.py  fast_api_app.py
