[project]
name = "submission-frontend"
version = "0.1.0"
description = "FastAPI Manager Dashboard for Expense Agent Runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "google-adk>=0.5.0",
    "google-cloud-aiplatform>=1.38.0",
    "requests>=2.28.0",
    "jinja2>=3.1.2",
]

[tool.uv]
dev-dependencies = []
